[package]
name = "shs_async"
version = "0.3.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Secret-handshake protocol (async)"
repository = "https://github.com/sunrise-choir/shs_async"
documentation = "https://docs.rs/shs_async/"
readme = "README.md"
keywords = ["secret-handshake", "handshake", "ssb", "scuttlebutt", "async"]

[dependencies]
futures-preview = "0.3.0-alpha.14"
shs_core = "0.3.0"
ssb-crypto = "0.1.2"

[dev-dependencies]
hex = "0.3"
pin-utils = "0.1.0-alpha.4"
readwrite = "0.1"
async-ringbuffer = "0.5"

[patch.crates-io]
async-ringbuffer = { git = "https://github.com/sunrise-choir/async-ringbuffer", rev = "0c599a5" }
